--- a/.github/workflows/v2-sca-scan.yml
+++ b/.github/workflows/v2-sca-scan.yml
@@ -160,6 +160,7 @@ jobs:
     - name: Free up disk space
       run: |
         bash .ci/free_disk_space.sh
+        sudo apt install temurin-17-jdk
         cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Blur Corruptions
